/*
 * $Id: ChangeLog,v 1.2215 2004/02/03 18:06:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-03 19:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   ! fix for duplicating trailing spaces in keys. It was possible to make
     a situation where key was stored with trailing space in duplicate
     part and even overwrite key buffer

  * xharbour/source/vm/fm.c
   * redundant initialization of static variables in hb_xinit() which
      cause problem when memory was allocated in C init procedures removed

  - xharbour/tests/ERRSYSW.prg
  + xharbour/tests/errsysw.prg
  - xharbour/tests/InitRun.prg
  + xharbour/tests/initrun.prg
  - xharbour/tests/wvtgui.PRG
  + xharbour/tests/wvtgui.prg
   * upper letters in filenames changed to lower

2004-02-03 10:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/gtnul/gtnul.c
    * Added missing return value to hb_gt_info()

  * tests/pp.prg
    * Version RC5

2004-02-03 13:10 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/gtalleg.c
    ! Fixed typos

2004-02-03 21:00 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + Wvt_ChooseColor( nRGBInit, aRGB16, nFlags )
    + Wvt_ChooseFont( cFontName, nHeight, nWidth, nWeight, nQuality, lItalic, lUnderline, lStrikeOut )
    + Wvt_SetMousePos( nRow, nCol )
      Forces the mouse pointer to rest at the nRow, nCol, in the mid of top and bottom of nRow.

  * xharbour/include/hbgtwvt.h
    + #include <commdlg.h>

  * xhatbour/tests/wvtgui.prg
    * Updated to demonstrate above functions.

2004-02-03 15:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * small debug info added

  * xharbour/source/rtl/gtnul/gtnul.c